--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- <link rel="stylesheet" href="style.css"> -->
     <title>Bookmarker App</title>
 </head>
-<body>
+<body onload="fetchBookmarks()">
     <div class="container justify-content-center">
         <div class="header clearfix">
             <h1 class="text-muted">Bookmarker</h1>
