--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
     <!-- FONTAWESOME CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" crossorigin="anonymous" />
 
-    <!-- BOOTSTRAP LINK -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-
+    <!-- GOOGLE FONTS -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <!-- CUSTOM CSS -->
-    <link rel="stylesheet" href="./style.csss">
+    <link rel="stylesheet" href="./style.css">
 
     <title>Bookmarker App</title>
 </head>
 
 <body onload="fetchBookmarks()">
-    <div class="container justify-content-center">
-        <div class="header clearfix">
-            <h1 class="text-muted">Bookmarker</h1>
+    <div class="container">
+        <div class="header">
+            <h1>Bookmarker Application</h1>
         </div>
         <div class="jumbotron">
             <h2>Bookmark Your Favorite Sites</h2>
@@ -35,11 +35,11 @@
                     <label for="site URL">Site URL</label>
                     <input type="text" class="form-control" id="siteURL" placeholder="Website URL">
                 </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="button">Submit</button>
             </form>
         </div>
-        <div class="row marketing">
-            <div class="col-lg-12">
+        <div class="links-container">
+            <div class="col">
                 <div id="bookmarksResults"></div>
             </div>
         </div>
